src/index.css
@import "tailwindcss";
@import "tw-animate-css";

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
}
:root {
  --radius: 0.65rem;

  --background: hsl(0, 0%, 1%);
  --foreground: hsl(0, 0%, 100%);

  --card: hsl(190, 20%, 10%);
  --card-foreground: hsl(0 0% 93%);
  --popover: hsl(190 20% 10%);
  --popover-foreground: hsl(0 0% 93%);

  --primary: hsl(180, 90%, 45%);
  --primary-foreground: hsl(0, 0%, 80%);

  --secondary: hsl(215 90% 45%);
  --secondary-foreground: hsl(0 0% 100%);

  --muted: hsl(0, 0%, 40%);
  --muted-foreground: hsl(200 25% 55%);

  --accent: hsl(190, 85%, 41%);
  --accent-foreground: hsl(0 0% 100%);

  --border: hsl(190, 62%, 49%);
  --input: hsl(194, 23%, 41%);
  --ring: hsl(190, 61%, 69%);
}

@layer base {
  * {
    @apply border-border;
  }

  :focus-visible {
    @apply outline-ring outline-2 outline-offset-2;
  }

  :focus:not(:focus-visible) {
    @apply outline-none;
  }
  body {
    color-scheme: dark;
    @apply bg-background text-foreground;
  }
}

html,
body {
  &::-webkit-scrollbar {
    display: none;
  }

  scrollbar-width: none;

  -ms-overflow-style: none;
}
html::-webkit-scrollbar,
body::-webkit-scrollbar {
  display: none;
}

